# cookiecutter_templates

c_gcc/: cookiecutter.json
c_gcc/{{cookiecutter.project_name}}/: main.c  meson.build  {{cookiecutter.project_name}}_lib.c  {{cookiecutter.project_name}}_lib.h
c_project/: cookiecutter.json
c_project/{{cookiecutter.project_name}}/: main.c  meson.build
c_project/{{cookiecutter.project_name}}/.cache/clangd/index/: main.c.4A23CAEC753815F7.idx  stb.h.47C7AF7DF32F327C.idx
raylib/: cookiecutter.json
raylib/{{cookiecutter.project_name}}/: main.c  meson.build
raylib/{{cookiecutter.project_name}}/.cache/clangd/index/: main.c.8394B4F2561FFF85.idx  simclist.c.54873CB4824BC518.idx  simclist.h.B06A4E9484FB6D50.idx
